--- a/spring-boot-monolith/src/main/resources/application.properties
+++ b/spring-boot-monolith/src/main/resources/application.properties
@@ -1,3 +1,17 @@
 spring.profiles.active=dev
 server.port=8080
 logging.level.org.springframework.web=DEBUG
+
+#spring.application.name=friday
+#server.port=8080
+## postgres
+#spring.datasource.url=jdbc:postgresql://localhost:5432/friday
+## CREATE USER tom WITH PASSWORD 'tom123';
+## GRANT ALL PRIVILEGES ON DATABASE springexample to tom;
+#spring.datasource.username=tom
+#spring.datasource.password=tom123
+spring.jpa.generate-ddl=true
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.show-sql=true
+
+spring.main.allow-bean-definition-overriding=true
