--- a/spring-boot-monolith/src/main/resources/application.properties
+++ b/spring-boot-monolith/src/main/resources/application.properties
@@ -1,18 +1,16 @@
 spring.profiles.active=dev
 server.port=8080
 logging.level.org.springframework.web=DEBUG
-
-#spring.application.name=friday
-## postgres
-#spring.datasource.url=jdbc:postgresql://localhost:5432/friday
-## CREATE USER tom WITH PASSWORD 'tom123';
-## GRANT ALL PRIVILEGES ON DATABASE springexample to tom;
-#spring.datasource.username=tom
-#spring.datasource.password=tom123
-#spring.jpa.generate-ddl=true
+spring.application.name=spotifyproject
+# postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/mockspotify
+# CREATE USER tom WITH PASSWORD 'tom123';
+# GRANT ALL PRIVILEGES ON DATABASE springexample to tom;
+spring.datasource.username=tom
+spring.datasource.password=tom123
+spring.jpa.generate-ddl=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.show-sql=true
 
 spring.main.allow-bean-definition-overriding=true
-
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+jwt.secret=pancakes
