--- a/spring-boot-monolith/src/main/resources/application-dev.properties
+++ b/spring-boot-monolith/src/main/resources/application-dev.properties
@@ -1,1 +1,13 @@
+spring.datasource.initialization-mode=always
+spring.datasource.platform=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/mockspotify
 
+spring.datasource.username=tom
+spring.datasource.password=tom123
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=none
+
+spring.jpa.generate-ddl=true
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
