--- a/spring-boot-monolith/src/main/resources/application-dev.properties
+++ b/spring-boot-monolith/src/main/resources/application-dev.properties
@@ -7,7 +7,8 @@ spring.datasource.username=tom
 spring.datasource.password=tom123
 
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.generate-ddl=true
 
+spring.main.allow-bean-definition-overriding=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
